--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,16 @@ body {
 a {
     text-decoration: none;
 }
-ul,ol,li {
+ul,
+ol,
+li {
     list-style: none;
     margin: 0;
     padding:0;
 }
 h1,
 h2,
-h3, {
+h3 {
     margin: 0;
     padding: 0;
 }
@@ -62,9 +64,21 @@ p, h1, h2, h3, {
         display: block;
         gap: 40px;
         padding: 24px 0;
-        
-    }
+        }
+.current {
+    position: relative;
 
+}
+.current::after {
+    content:"";
+    background-color: #404BBF;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+}
 .nav-link:last-child {
     margin-right: 0px;
 }
