--- a/css/styles.css
+++ b/css/styles.css
@@ -362,4 +362,50 @@ padding: 100px 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+   
+   }
+   .text-footer-soc{
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    display: inline-block;
+    
+   
+   }
+   .icon-list{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    
+  
+   }
+   
+   .icon-link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:#4D5AE5;
+    border-radius: 50%;
+    
+    }
+    
+    .icon-item  {
+        width: 40px;
+        height: 40px;
+    }
+
+   .icon-list .icon-link:hover .icon {
+       background-color: #fff;
+   }
+
+   .icon-list .icon {
+       fill: #fff;
+   }
+
+   .icon-list .icon-link:hover .icon {
+       fill: #03a9f4;
    }
