--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,9 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)
     url(../images/people-office\ 1-min.jpg);
 background-position: center;
 background-size: cover;
+box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .solutions {
     color: #FFF;
@@ -404,6 +407,7 @@ padding: 100px 0;
 
    .icon-list .icon {
        fill: #fff;
+     
    }
 
    .icon-list .icon-link:hover .icon {
