--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ p, h1, h2, h3, {
 .current {
     position: relative;
     color: #404BBF;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current::after {
@@ -297,6 +298,7 @@ img {
   .add {
     gap: 40px;
     display: flex;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 .centerr {
     gap: 24px;
