--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,8 @@ p, h1, h2, h3, {
     font-size: 16px;
     letter-spacing: 0.02em;
     line-height: 1.5;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .address-link:hover,
 .address :focus  {
@@ -124,6 +124,11 @@ background-size: cover;
 box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
 }
 .solutions {
     color: #FFF;
@@ -155,7 +160,8 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
     margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
-}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 .cursor-pointer:hover,
 .cursor-pointer:focus {
 background-color: #404BBF;
@@ -163,10 +169,7 @@ background-color: #404BBF;
 .centero {
     margin: 0;
 }
-.start {
-    padding-top: 188px;
-    padding-bottom: 188px;
-}
+
 .title {
     color: #2E2F42;
     font-family: Roboto; sans-serif;
