--- a/css/styles.css
+++ b/css/styles.css
@@ -403,6 +403,35 @@ padding: 100px 0;
     
     }
     
+    .icon-linkk {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    gap: 24px;
+
+    }
+    .icon-listt .icon-link:hover .iconn {
+     background-color: #fff;
+    }
+    
+    .icon-listt .iconn {
+    fill: #fff;
+    
+    }
+    
+    .icon-listt .icon-link:hover .iconn {
+            fill: #404bbf;
+    }
+
+    .icon-itemm {
+    width: 40px;
+    height: 40px;
+    }
+
     .icon-item  {
         width: 40px;
         height: 40px;
@@ -418,7 +447,7 @@ padding: 100px 0;
    }
 
    .icon-list .icon-link:hover .icon {
-       fill: #03a9f4;
+       fill: #404bbf;
    }
    .footer-container {
     display: flex;
