--- a/css/styles.css
+++ b/css/styles.css
@@ -114,11 +114,18 @@ p, h1, h2, h3, {
 .address :focus  {
     color: #404bbf;
 }
-
+ .container-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+ }
 .start {
 background: #2E2F42;
-background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-    url(../images/people-office\ 1-min.jpg);
+
 background-position: center;
 background-size: cover;
 box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -126,7 +133,7 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 6px rgba(46, 47, 66, 0.08);
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
 }
@@ -391,7 +398,15 @@ padding: 100px 0;
     
   
    }
-   
+    .icon-antena {
+    width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #4D5A;
+        border-radius: 50%;
+    }
    .icon-link{
     width: 100%;
     height: 100%;
