--- a/css/styles.css
+++ b/css/styles.css
@@ -395,17 +395,19 @@ padding: 100px 0;
     display: flex;
     justify-content: center;
     gap: 10px;
-    
-  
    }
-    .icon-antena {
-    width: 100%;
-        height: 100%;
+    
+    .icon-item {
+      width: 40px;
+      height: 40px;
+    }
+
+    .icon-astr {
+      
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #4D5A;
-        border-radius: 50%;
+      
     }
    .icon-link{
     width: 100%;
@@ -417,54 +419,15 @@ padding: 100px 0;
     border-radius: 50%;
     
     }
-    
-    .icon-linkk {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #4D5AE5;
-    border-radius: 50%;
-    gap: 24px;
-
-    }
-    .icon-listt .icon-link:hover .iconn {
-     background-color: #fff;
+    .icon-link:hover {
+        background-color: aqwa;
     }
     
-    .icon-listt .iconn {
-    fill: #fff;
-    
+    .icon-icon {
+        fill: #404bbf;
     }
     
-    .icon-listt .icon-link:hover .iconn {
-            fill: #404bbf;
-    }
-
-    .icon-itemm {
-    width: 40px;
-    height: 40px;
-    }
-
-    .icon-item  {
-        width: 40px;
-        height: 40px;
-    }
-
-   .icon-list .icon-link:hover .icon {
-       background-color: #fff;
-   }
-
-   .icon-list .icon {
-       fill: #fff;
-     
-   }
-
-   .icon-list .icon-link:hover .icon {
-       fill: #404bbf;
-   }
-   .footer-container {
+    .footer-container {
     display: flex;
     align-items: baseline;
     margin-right: 120px;
