--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,7 @@ padding: 100px 0;
     
     .icon-item {
       width: 40px;
-      height: 40px;
+       height: 40px;
     }
 
     .icon-astr {
@@ -419,15 +419,55 @@ padding: 100px 0;
     border-radius: 50%;
     
     }
-    .icon-link:hover {
-        background-color: aqwa;
+    
+    .icon-linkk {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    gap: 24px;
+
+    }
+    .icon-listt .icon-link:hover .iconn {
+     background-color: #fff;
     }
     
-    .icon-icon {
-        fill: #404bbf;
+    .icon-listt .iconn {
+    fill: #fff;
+    
     }
     
-    .footer-container {
+    .icon-listt .icon-link:hover .iconn {
+            fill: #404bbf;
+    }
+
+    .icon-itemm {
+    width: 40px;
+    height: 40px;
+    
+    }
+
+    .container-icon  {
+        width: 40px;
+        height: 40px;
+    }
+
+   .icon-astr .icon-anten-link:hover .icon {
+       background-color: #fff;
+   }
+
+   .icon-astr .icon-antenon {
+       fill: #fff;
+     
+   }
+
+   .icon-astrst .icon-anten-link:hover .icon {
+       fill: #404bbf;
+   }
+   .footer-container {
     display: flex;
     align-items: baseline;
     margin-right: 120px;
