--- a/css/styles.css
+++ b/css/styles.css
@@ -419,6 +419,9 @@ padding: 100px 0;
     border-radius: 50%;
     
     }
+    .container-iconn{
+        height: 112px;
+    }
     
     .icon-linkk {
     width: 100%;
