--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ p, h1, h2, h3, {
 .address :focus  {
     color: #404bbf;
 }
- .container-icon {
+ .container-second {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -419,10 +419,7 @@ padding: 100px 0;
     border-radius: 50%;
     
     }
-    .container-iconn{
-        height: 112px;
-    }
-    
+   
     .icon-linkk {
     width: 100%;
     height: 100%;
@@ -451,11 +448,6 @@ padding: 100px 0;
     width: 40px;
     height: 40px;
     
-    }
-
-    .container-icon  {
-        width: 40px;
-        height: 40px;
     }
 
    .icon-astr .icon-anten-link:hover .icon {
