--- a/css/styles.css
+++ b/css/styles.css
@@ -420,15 +420,22 @@ padding: 100px 0;
     }
     .icon-linkd {
         width: 40px; ;
-            height: 40px;
+        height: 40px;
         display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #4D5AE5;
-            border-radius: 50%;
+        align-items: center;
+        justify-content: center;
+        background-color: #4D5AE5;
+        border-radius: 50%;
 
     }
 
+    .text-footer-soc{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     
+
+    }
     .icon-itemm {
     width: 40px;
     height: 40px;
