--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ p, h1, h2, h3, {
 }
 .head {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
     width: 1158px;
@@ -433,7 +434,7 @@ padding: 100px 0;
         display: flex;
         align-items: center;
         justify-content: center;
-     
+   
 
     }
     .icon-itemm {
