--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ p, h1, h2, h3, {
 }
 .head {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
     width: 1158px;
@@ -418,7 +418,9 @@ padding: 100px 0;
     justify-content: center;
     background-color:#4D5AE5;
     border-radius: 50%;
+    fill: #f4f4fd;
     }
+
     .icon-linkd {
         width: 40px; ;
         height: 40px;
@@ -427,6 +429,7 @@ padding: 100px 0;
         justify-content: center;
         background-color: #4D5AE5;
         border-radius: 50%;
+        fill: #FFF;
 
     }
 
