--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,10 @@ padding: 100px 0;
         align-items: center;
         justify-content: center;
     }
-    .address li {
+    .address .add li:first-child a {
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .address .add li:nth-child(2) a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
