--- a/css/styles.css
+++ b/css/styles.css
@@ -131,13 +131,13 @@ background: #2E2F42;
 background-position: center;
 background-size: cover;
 box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.jpg);
-    max-width: 1440px;
-    background-repeat: no-repeat;
+0px 1px 1px rgba(46, 47, 66, 0.16),
+0px 1px 6px rgba(46, 47, 66, 0.08);
+padding-top: 188px;
+padding-bottom: 188px;
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.jpg);
+max-width: 1440px;
+background-repeat: no-repeat;
 }
 .solutions {
     color: #FFF;
@@ -465,7 +465,7 @@ padding: 100px 0;
    .icon-astrst .icon-anten-link:hover .icon {
        fill: #404bbf;
    }
-   .container-footer {
+   .container-bottom {
     display: flex;
     align-items: baseline;
     }
