--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,7 @@ padding: 100px 0;
     }
 
     .icon-linkd {
-        width: 40px; ;
+        width: 40px;
         height: 40px;
         display: flex;
         align-items: center;
@@ -450,11 +450,6 @@ padding: 100px 0;
         justify-content: center;
    
 
-    }
-    .icon-itemm {
-    width: 40px;
-    height: 40px;
-    
     }
 
    .icon-astr .icon-anten-link:hover .icon {
@@ -481,4 +476,6 @@ padding: 100px 0;
     display: flex;
     align-items: baseline;
     }
-    
+    .icon-item-footer {
+
+    }
