--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,17 @@ padding: 100px 0;
     justify-content: center;
     gap: 10px;
    }
-    
+
+    .icon-list-foot {
+        display: flex;
+        gap: 16px;
+    }
+
+    .icon-item-footer {
+        width: 40px;
+        height: 40px;
+    }
+
     .icon-item {
       width: 40px;
       height: 40px;
@@ -437,14 +447,15 @@ padding: 100px 0;
 
     
     .icon-linkd {
-        width: 40px;
-        height: 40px;
+        width: 100%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         background-color: #4D5AE5;
         border-radius: 50%;
         fill: #FFF;
+        justify-content: center;
 
     }
 
@@ -484,4 +495,8 @@ padding: 100px 0;
     .icon-linkd:hover {
         background-color: #31d0aa;;
     }
-    
+    .container-footer {
+        display: flex;
+        align-items: baseline;
+        margin-right: 120px;
+    }
