--- a/css/styles.css
+++ b/css/styles.css
@@ -456,6 +456,7 @@ padding: 100px 0;
         border-radius: 50%;
         fill: #FFF;
         justify-content: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 
     }
 
@@ -493,9 +494,14 @@ padding: 100px 0;
     }
     
     .icon-linkd:hover {
-        background-color: #31d0aa;;
+        background-color: #31d0aa;
     }
-    .container-footer {
+    
+    .icon-linkd:focus {
+            background-color: #31d0aa;
+    }
+   
+        .container-footer {
         display: flex;
         align-items: baseline;
         margin-right: 120px;
