--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ background-repeat: no-repeat;
     margin-right: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
 .cursor-pointer:hover,
 .cursor-pointer:focus {
 background-color: #404BBF;
@@ -283,6 +284,23 @@ img {
     padding-bottom: 120px;
     margin: 0;
 }
+ .app-info {
+    position: relative;
+    overflow: hidden;
+}
+
+.team-pp {
+    position: absolute;
+    transform: translateY(100%);
+}
+
+.forty:hover
+.team-pp {
+    transform: translateY(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .text {
     background-color:#2E2F42;
     color: #FFF;
@@ -293,7 +311,7 @@ img {
     width: calc((100% - 72px) / 4);
     margin: 0;
     background-color: #FFF;
-    box-shadow зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08),
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -410,6 +428,7 @@ padding: 100px 0;
     .icon-item-footer {
         width: 40px;
         height: 40px;
+      
     }
 
     .icon-item {
