--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ background-color: #404BBF;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin: 0;
+
         
 }
 .teamul {
@@ -223,7 +223,7 @@ background-color: #404BBF;
         text-transform: capitalize;
         text-align: center;
         margin-bottom: 72px;
-        margin: 0;
+        
     
 }
 .center {
@@ -309,7 +309,8 @@ img {
 .bak {
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
-    margin: 0;
+    
+   
     background-color: #FFF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -321,12 +322,13 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-    margin: 0;
+    margin: bottom 8px; 
     
  }
 .employee-info {
  padding: 32px 0;
  padding-bottom: 32px;
+
 }
   .add {
     gap: 40px;
@@ -336,7 +338,7 @@ img {
 .centerr {
     gap: 24px;
     display: flex;
-    margin: 0;
+    
 }
 .name {
     background-color: #FFFFFF;
@@ -346,11 +348,9 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-    margin: 0;
+    
 }
-.team-pp {
-    margin: 0;
-}
+
 .logo-footer {
     color: #4D5AE5;
             font-family: Raleway, sans-serif;
