--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,7 @@ img {
     transform: translateY(100%);
 }
 
-.forty:hover
-.team-pp {
+.forty:hover .sellers-cover-container {
     transform: translateY(0);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -447,7 +446,7 @@ padding: 100px 0;
         justify-content: center;
     }
     .address .add li:first-child a {
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .address .add li:nth-child(2) a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -463,8 +462,31 @@ padding: 100px 0;
     border-radius: 50%;
     fill: #f4f4fd;
     }
-
     
+    .sellers-cover-container {
+        position: absolute;
+        top: 0;
+        background-color: #434455;
+        height: 100%;
+        border: 15px 15px 0px 0px;
+        display: flex;
+        align-items: center;
+        padding: 0 40px;
+        transform: translateY(100%);
+        transition: transform 300ms linear;
+    }
+     .sellers-cover-text {
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: 0.02em;
+            color: #fff;
+            
+           
+    }
+    .sellers-cover-wrap {
+    position: relative; 
+    overflow: hidden;   
+    }
     .icon-linkd {
         width: 100%;
         height: 100%;
