--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,9 @@ p, h1, h2, h3, {
 .nav-link:last-child {
     margin-right: 0px;
 }
+p {
+    margin: 0;
+}
     
 .nav-link:hover,
 .nav-link:focus{
@@ -137,6 +140,7 @@ padding-bottom: 188px;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.jpg);
 max-width: 1440px;
 background-repeat: no-repeat;
+margin: 0 auto;
 }
 .solutions {
     color: #FFF;
@@ -192,7 +196,6 @@ background-color: #404BBF;
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-    margin: 0;
     
 }
 .second {
@@ -293,11 +296,11 @@ img {
 }
 
 .team-pp {
-    position: absolute;
-    transform: translateY(100%);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
-.forty:hover .sellers-cover-container {
+.forty:hover .sellers-cover-textllers-cover-container {
     transform: translateY(0);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -321,7 +324,7 @@ background-color: #FFF;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-    margin: bottom 8px; 
+   margin-bottom: 8px; 
     
  }
 .employee-info {
@@ -462,24 +465,22 @@ padding: 100px 0;
     border-radius: 50%;
     fill: #f4f4fd;
     }
-    
-    .sellers-cover-container {
-        position: absolute;
-        top: 0;
-        background-color: #434455;
-        height: 100%;
-        border: 15px 15px 0px 0px;
-        display: flex;
-        align-items: center;
-        padding: 0 40px;
-        transform: translateY(100%);
-        transition: transform 300ms linear;
-    }
+
      .sellers-cover-text {
             font-size: 16px;
             line-height: 150%;
             letter-spacing: 0.02em;
             color: #fff;
+            position: absolute;
+                top: 0;
+                background-color: #434455;
+                height: 100%;
+                border: 15px 15px 0px 0px;
+                display: flex;
+                align-items: center;
+                padding: 0 40px;
+                transform: translateY(100%);
+                transition: transform 300ms linear;
             
            
     }
@@ -500,14 +501,6 @@ padding: 100px 0;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 
     }
-
-    .text-footer-soc{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-   
-
-    }
    
    .icon-astr .icon-anten-link:hover .icon {
        background-color: #fff;
@@ -522,7 +515,7 @@ padding: 100px 0;
        fill: #404bbf;
    }
    .text-footer-soc {
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -545,6 +538,9 @@ padding: 100px 0;
         .container-footer {
         display: flex;
         align-items: baseline;
+    
+    }
+    .slow doun {
         margin-right: 120px;
     }
          .icon-link:hover {
