--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,9 @@ padding: 100px 0;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 
     }
-   
+    .container-footer container {
+        margin-right: 120px;
+    }
    .icon-astr .icon-anten-link:hover .icon {
        background-color: #fff;
    }
