--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,7 @@ img {
     letter-spacing: 0.02em;
 }
 
-.forty:hover .sellers-cover-textllers-cover-container {
+.forty:hover .sellers-cover-text {
     transform: translateY(0);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -504,6 +504,7 @@ padding: 100px 0;
     .container-footer container {
         margin-right: 120px;
     }
+
    .icon-astr .icon-anten-link:hover .icon {
        background-color: #fff;
    }
