--- a/css/styles.css
+++ b/css/styles.css
@@ -481,7 +481,7 @@ padding: 100px 0;
                 align-items: center;
                 padding: 0 40px;
                 transform: translateY(100%);
-                transition: transform 300ms linear;
+                transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
             
            
     }
