--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ padding: 100px 0;
 
 .forty {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .app-info {
     padding: 32px 16px;
