--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
 0px 1px 6px rgba(46, 47, 66, 0.08);
 padding-top: 188px;
 padding-bottom: 188px;
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.jpg);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\1-min.jpg);
 max-width: 1440px;
 background-repeat: no-repeat;
 margin: 0 auto;
@@ -308,6 +308,15 @@ img {
             0px 2px 1px rgba(46, 47, 66, 0.08);
             
 }
+
+.forty:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+
+}
+
+
 .text {
     background-color:#2E2F42;
     color: #FFF;
@@ -387,6 +396,7 @@ padding: 100px 0;
 
 .forty {
     width: calc((100% - 48px) / 3);
+    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .app-info {
@@ -547,9 +557,7 @@ padding: 100px 0;
     }
     .slow doun {
         margin-right: 120px;
-   
-            
-    }
+   }
          .icon-link:hover {
              background-color: #404bbf;
          }
@@ -557,3 +565,6 @@ padding: 100px 0;
          .icon-link:focus {
              background-color: #404bbf;
          }
+    .antena {
+        fill:#f4f4fd;
+    }
