--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
 0px 1px 6px rgba(46, 47, 66, 0.08);
 padding-top: 188px;
 padding-bottom: 188px;
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\1-min.jpg);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1-min.jpg);
 max-width: 1440px;
 background-repeat: no-repeat;
 margin: 0 auto;
@@ -327,6 +327,10 @@ border-radius: 0px 0px 4px 4px;
 width: calc((100% - 72px) / 4);
 margin: 0;
 background-color: #FFF;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
  .team-p {
