--- a/css/styles.css
+++ b/css/styles.css
@@ -401,8 +401,9 @@ padding: 100px 0;
 .forty {
     width: calc((100% - 48px) / 3);
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .app-info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -482,6 +483,7 @@ padding: 100px 0;
     background-color:#4D5AE5;
     border-radius: 50%;
     fill: #f4f4fd;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
      .sellers-cover-text {
@@ -559,9 +561,9 @@ padding: 100px 0;
         align-items: baseline;
     
     }
-    .slow doun {
-        margin-right: 120px;
-   }
+        .slow doun {
+            margin-right: 120px;
+        }
          .icon-link:hover {
              background-color: #404bbf;
          }
