--- a/css/styles.css
+++ b/css/styles.css
@@ -561,7 +561,9 @@ padding: 100px 0;
         align-items: baseline;
     
     }
-       
+          .icon-link {
+              transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          }
          .icon-link:hover {
              background-color: #404bbf;
          }
