--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ p, h1, h2, h3, {
         display: block;
         gap: 40px;
         padding: 24px 0;
-        transform: color 250ms;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
  .nav-link:hover,
@@ -494,11 +494,8 @@ padding: 100px 0;
     top: 0;
     height: 100%;
     border: 15px 15px 0px 0px;
-    display: flex;
-    align-items: center;
     padding: 0 40px;
     transform: translateY(100%);
-    
     padding: 40px 32px;
     color: #f4f4fd;
     background-color: #4d5ae5;
@@ -573,4 +570,7 @@ padding: 100px 0;
          }
     .antena {
         fill:#f4f4fd;
+        
     }
+       
+        
