--- a/css/styles.css
+++ b/css/styles.css
@@ -685,6 +685,11 @@ padding: 100px 0;
                      position: relative;
                      
                  }
+                form {
+                    display: flex;
+                    gap: 24px;
+
+                }
         
                  .icon-input {
                      position: absolute;
@@ -802,4 +807,12 @@ padding: 100px 0;
                         letter-spacing: 0.02em;
                         text-align: center;
                         color: var(--navy-blue);
+                }
+                .subscribe {
+                    margin-bottom: 16px;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 1.5;
+                    letter-spacing: 0.02em;
+                    color: #ffffff;
                 }
