--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ padding: 100px 0;
         
     }
        
-         .backdrop {
+         .backdrop is-open {
              position: fixed;
              top: 0;
              left: 0;
@@ -842,5 +842,18 @@ padding: 100px 0;
             }
             .form-input-subscribe {
             margin-left: 16px;
+            fill: #e7e9fc;
             }
-               
+            .form-email {
+            width: 264px;
+            height: 40px;
+            border: 1px solid #ffffff;
+            background-color: transparent;
+            font-size: 12px;
+            line-height: 2;
+            letter-spacing: 0.04em;
+            padding-left: 16px;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            border-radius: 4px;
+            color: #ffffff;
+            }
