--- a/css/styles.css
+++ b/css/styles.css
@@ -629,11 +629,7 @@ padding: 100px 0;
              fill: #FFFFFF;
          }
     
-         .is-open {
-             opacity: 1;
-             visibility: visible;
-             pointer-events: auto;
-         }
+       
     
          .close-icon {
              transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -856,4 +852,13 @@ padding: 100px 0;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
             border-radius: 4px;
             color: #ffffff;
+            }
+            .form-main{
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            text-align: center;
+            letter-spacing: 0.02em;
+            color:#2E2F42;
+            margin-bottom: 16px;
             }
