--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ padding: 100px 0;
         
     }
        
-         .backdrop is-open {
+         .modal {
              position: fixed;
              top: 0;
              left: 0;
