--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ padding: 100px 0;
         
     }
        
-         .is-open {
+         .backdrop is-open  {
              position: fixed;
              top: 0;
              left: 0;
@@ -582,12 +582,18 @@ padding: 100px 0;
              background-color: rgba(46, 47, 66, 0.40);
              opacity: 0;
              visibility: hidden;
-             position: none;
              transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-             visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-         }
+             pointer-events: none;
+            }
+
+         .is-open  {
+          opacity: 1;
+          visibility: visible;  
+          pointer-events: auto;
+        }
     
          .modal {
+            padding: 72px 24px 24px;
              position: absolute;
              top: 50%;
              left: 50%;
@@ -644,12 +650,6 @@ padding: 100px 0;
                      margin-bottom: 16px;
                  }
         
-                 .group-modal {
-                     margin-bottom: 8px;
-                     margin-left: 24px;
-                     margin-right: 24px;
-                     margin-top: 48px;
-                 }
         
                  .form-label {
                      display: block;
@@ -682,8 +682,7 @@ padding: 100px 0;
                      
                  }
                 form {
-                    display: flex;
-                    gap: 24px;
+                gap: 24px;
 
                 }
         
@@ -700,10 +699,9 @@ padding: 100px 0;
                      fill: #4d5ae5;
                  }
         
-                 .texterea-modal {
-                     margin-bottom: 16px;
-                    margin-left: 24px;
-                        margin-right: 24px;
+                .textarea-modalodal {
+                 margin-bottom: 16px;
+            
                  }
         
                  .form-textarea {
