--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,8 @@ padding: 100px 0;
           opacity: 1;
           visibility: visible;  
           pointer-events: auto;
+          
+
         }
     
          .modal {
@@ -599,11 +601,12 @@ padding: 100px 0;
              left: 50%;
              transform: translate(-50%, -50%) scale(1);
              width: 408px;
-             min-height: 584px;
+            min-height: 584px;
              background-color: #FCFCFC;
              border-radius: 4px;
              transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-         }
+        box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+            }
     
          .modal-close-btn {
              position: absolute;
@@ -692,7 +695,7 @@ padding: 100px 0;
                      left: 16px;
                      transform: translateY(-50%);
                      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                     fill: fill: var(--navy-blue);;
+                     fill: var(--navy-blue);
                  }
         
                  .form-input:focus+.icon-input {
@@ -787,7 +790,9 @@ padding: 100px 0;
                      margin-right: auto;
                      margin-left: auto;
                      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                 }
+                     border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                 
+                    }
         
                  .btn-modal:hover,
                  .btn-modal:focus {
