--- a/css/styles.css
+++ b/css/styles.css
@@ -573,18 +573,18 @@ padding: 100px 0;
         
     }
        
-         .backdrop is-open  {
-             position: fixed;
-             top: 0;
-             left: 0;
-             width: 100%;
-             height: 100%;
-             background-color: rgba(46, 47, 66, 0.40);
-             opacity: 0;
-             visibility: hidden;
-             transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-             pointer-events: none;
-            }
+    .backdrop  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+    }
 
          .is-open  {
           opacity: 1;
