--- a/css/styles.css
+++ b/css/styles.css
@@ -586,32 +586,32 @@ padding: 100px 0;
     pointer-events: none;
     }
 
-         .is-open  {
-          opacity: 1;
-          visibility: visible;  
-          pointer-events: auto;
+    .is-open  {
+    opacity: 1;
+    visibility: visible;  
+    pointer-events: auto;
           
 
-        }
+    }
     
-         .modal {
-            padding: 72px 24px 24px;
-             position: absolute;
-             top: 50%;
-             left: 50%;
-             transform: translate(-50%, -50%) scale(1);
-             width: 408px;
-            min-height: 584px;
-             background-color: #FCFCFC;
-             border-radius: 4px;
-             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-            }
+    .modal {
+    padding: 72px 24px 24px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    }
     
-         .modal-close-btn {
-             position: absolute;
-             top: 24px;
-             right: 24px;
+    .modal-close-btn {
+     position: absolute;
+     top: 24px;
+    right: 24px;
              width: 24px;
              height: 24px;
              border-radius: 50%;
