--- a/css/styles.css
+++ b/css/styles.css
@@ -612,57 +612,56 @@ padding: 100px 0;
      position: absolute;
      top: 24px;
     right: 24px;
-             width: 24px;
-             height: 24px;
-             border-radius: 50%;
-             padding: 0;
-             cursor: pointer;
-             border: 1px solid rgba(0, 0, 0, 0.10);
-             background-color: #e7e9fc;
-             display: flex;
-             justify-content: center;
-             align-items: center;
-             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-             border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-         }
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    padding: 0;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    background-color: #e7e9fc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     
-         .modal-close-btn:hover,
-         .modal-close-btn:focus {
-             background-color: #404bbf;
-             border: none;
-         }
+    .modal-close-btn:hover,
+    .modal-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+        }
     
-         .modal-close-btn:hover>.modal-close-icon,
-         .modal-close-btn:focus>.modal-close-icon {
-             background-color: #404bbf;
-             fill: #FFFFFF;
-         }
+    .modal-close-btn:hover>.modal-close-icon,
+    .modal-close-btn:focus>.modal-close-icon {
+     fill: #FFFFFF;
+     }
     
        
     
-         .close-icon {
-             transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-         }
-                 .form-title {
-                     color: #2e2f42;
-                     text-align: center;
-                     font-size: 16px;
-                     font-weight: 500;
-                     line-height: 1.5;
-                     letter-spacing: 0.02em;
-                     margin-bottom: 16px;
-                 }
+    .modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .form-title {
+     color: #2e2f42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    }
         
         
-                 .form-label {
-                     display: block;
-                     margin-bottom: 4px;
-                     font-size: 12px;
-                     line-height: 1.17;
-                     letter-spacing: 0.04em;
-                     color: #8e8f99;
-                     
-                 }
+    .form-label {
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    }
         
                  .form-input {
                      display: flex;
