--- a/css/styles.css
+++ b/css/styles.css
@@ -834,7 +834,7 @@ fill: #f4f4fd;
             margin-left: 16px;
             fill: #e7e9fc;
             }
-            .form-email {
+            .form-em-email {
             width: 264px;
             height: 40px;
             border: 1px solid #ffffff;
