--- a/css/styles.css
+++ b/css/styles.css
@@ -582,7 +582,7 @@ padding: 100px 0;
     background-color: rgba(46, 47, 66, 0.40);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     pointer-events: none;
     }
 
