--- a/css/styles.css
+++ b/css/styles.css
@@ -622,8 +622,7 @@ padding: 100px 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .modal-close-btn:hover,
@@ -855,7 +854,7 @@ gap: 24px;
 margin-bottom: 8px;
 }
 
-.checkbox-form-link {
+.formad {
 width: 16px;
 height: 16px;
 border: 1px solid rgba(46, 47, 66, 0.4);
