--- a/css/styles.css
+++ b/css/styles.css
@@ -875,5 +875,9 @@ display: inline-flex;
 align-items: center;
 justify-content: center;
 fill: transparent;
-
+}
+.hidden-checkbox:checked+.checkbox .custom-checkbox {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
 }
